# DonorBro

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: android_build.yml  android_build_debug.yml
donorbro/src-tauri/src/: main.rs
public/: splash.html
src/: AndroidIndex.jsx  App.jsx  OtherIndex.jsx  config.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/hooks/: useForensicStream.js
src/ui/screens/: RoleSelection.jsx
