[package]
name = "donorbro"
version = "0.1.0"
description = "DonorBro is an intelligent donation matching platform using AI and blockchain to securely connect donors with people in urgent need. It ensures fast matching, verified records, encrypted data, and transparent coordination between donors, receivers, hospitals, and authorities."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "donorbro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = "2.3.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-store = "2.4.2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-shell = "2.3.4"
tauri-plugin-dialog = "2.5.0"
tauri-plugin-process = "2.3.1"

